# PromptVault

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: diff.rs  lib.rs  main.rs
src-tauri/src/commands/: prompt.rs  version.rs
src-tauri/src/storage/: index.rs  mod.rs  prompt.rs
src/components/layout/: Sidebar.tsx
src/components/prompt/: MetaForm.tsx  PromptEditor.tsx
src/components/ui/: dialog.tsx  select.tsx  slider.tsx  toaster.tsx  use-toast.tsx
src/components/version/: DiffView.tsx  VersionHistory.tsx
src/lib/: api.ts  types.ts  utils.ts
