[package]
name = "promptvault"
version = "0.1.0"
description = "A local-first Prompt version management tool"
authors = ["you"]
edition = "2021"

[lib]
name = "promptvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
semver = "1"
